unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/abacus__Accounting_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Relationship object to allow custom field mappings from a Payment or an Opportunity to a Ledger Entry.</description>
    <label>Accounting Field Mapping</label>
    <pluralLabel>Accounting Field Mappings</pluralLabel>
</CustomObject>