unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Destination_Field__c.field-meta.xml
<CustomField>
    <fullName>abacus__Destination_Field__c</fullName>
    <description>API name of the Destination field being mapped to.</description>
    <inlineHelpText>API name of the Destination field being mapped to.</inlineHelpText>
    <label>Destination Field</label>
    <metadataRelationshipControllingField>abacus__Accounting_Field_Mapping__mdt.abacus__Destination_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Accounting_Field_Mappings</relationshipLabel>
    <relationshipName>Accounting_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>