unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>abacus__Destination_Object__c</fullName>
    <description>The object of the destination field being mapped.</description>
    <inlineHelpText>The object of the destination field being mapped.</inlineHelpText>
    <label>Destination Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Accounting_Field_Mappings</relationshipLabel>
    <relationshipName>Accounting_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>