unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>abacus__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this mapping was deleted.</description>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>