unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Mapping_Behavior__c.field-meta.xml
<CustomField>
    <fullName>abacus__Mapping_Behavior__c</fullName>
    <defaultValue>'Current Value'</defaultValue>
    <description>The behavior regarding how the Destination Field's data is maintained.</description>
    <inlineHelpText>If set to Point-in-Time, the Destination Field's data is mapped from the Source Field only when the Ledger Entry is created. If set to Current Value, Accounting Subledger reverses and replaces Ledger Entries when the Source Field is updated.</inlineHelpText>
    <label>Mapping Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Point-in-Time</fullName>
            </value>
            <value>
                <fullName>Current Value</fullName>
                <default>true</default>
                <label>Current Value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>