unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>abacus__Payment_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this mapping should apply to Transaction Ledger Entries.</description>
    <inlineHelpText>Determines if this mapping should apply to Transaction Ledger Entries.</inlineHelpText>
    <label>Transaction</label>
    <type>Checkbox</type>
</CustomField>