unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Pledge_Allocation__c.field-meta.xml
<CustomField>
    <fullName>abacus__Pledge_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this mapping should apply to Allocation Ledger Entries.</description>
    <inlineHelpText>Determines if this mapping should apply to Allocation Ledger Entries.</inlineHelpText>
    <label>Allocation</label>
    <type>Checkbox</type>
</CustomField>