unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Source_Field__c.field-meta.xml
<CustomField>
    <fullName>abacus__Source_Field__c</fullName>
    <description>API name of the field on the Source object that will be mapped to the Destination field.</description>
    <inlineHelpText>API name of the field on the Source object that will be mapped to the Destination field.</inlineHelpText>
    <label>Source Field</label>
    <metadataRelationshipControllingField>abacus__Accounting_Field_Mapping__mdt.abacus__Source_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Accounting_Field_Mappings1</relationshipLabel>
    <relationshipName>Accounting_Field_Mappings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>