unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/fields/abacus__Source_Object__c.field-meta.xml
<CustomField>
    <fullName>abacus__Source_Object__c</fullName>
    <description>The object of the source field being mapped.</description>
    <inlineHelpText>The object of the source field being mapped.</inlineHelpText>
    <label>Source Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Accounting_Field_Mappings1</relationshipLabel>
    <relationshipName>Accounting_Field_Mappings1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>