unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/validationRules/abacus__Mapping_Behavior_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>abacus__Mapping_Behavior_is_Required</fullName>
    <active>true</active>
    <description>A Mapping Behavior is Required to save.</description>
    <errorConditionFormula>AND(NOT(abacus__IsDeleted__c), ISBLANK(TEXT(abacus__Mapping_Behavior__c)))</errorConditionFormula>
    <errorDisplayField>abacus__Mapping_Behavior__c</errorDisplayField>
    <errorMessage>You must select a Mapping Behavior.</errorMessage>
</ValidationRule>