unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/validationRules/abacus__Prevent_GAU_to_Payment_Transaction_Map.validationRule-meta.xml
<ValidationRule>
    <fullName>abacus__Prevent_GAU_to_Payment_Transaction_Map</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  abacus__Source_Object__r.QualifiedApiName = 'npsp__General_Accounting_Unit__c', abacus__Payment_Transaction__c = true)</errorConditionFormula>
    <errorMessage>A General Accounting Unit can't be mapped to a Transaction Ledger Entry.</errorMessage>
</ValidationRule>