unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/listViews/abacus__All.listView-meta.xml
<ListView>
    <fullName>abacus__All</fullName>
    <columns>MasterLabel</columns>
    <columns>abacus__Source_Object__c</columns>
    <columns>abacus__Source_Field__c</columns>
    <columns>abacus__Destination_Object__c</columns>
    <columns>abacus__Destination_Field__c</columns>
    <columns>abacus__Mapping_Behavior__c</columns>
    <columns>abacus__Payment_Transaction__c</columns>
    <columns>abacus__Pledge_Allocation__c</columns>
    <columns>abacus__Pledge_Allocation_Payment__c</columns>
    <columns>abacus__IsDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>