unpackaged/main/default/objects/abacus__Accounting_Field_Mapping__mdt/listViews/abacus__All_Active_Mappings.listView-meta.xml
<ListView>
    <fullName>abacus__All_Active_Mappings</fullName>
    <columns>MasterLabel</columns>
    <columns>abacus__Source_Object__c</columns>
    <columns>abacus__Source_Field__c</columns>
    <columns>abacus__Destination_Object__c</columns>
    <columns>abacus__Destination_Field__c</columns>
    <columns>abacus__Mapping_Behavior__c</columns>
    <columns>abacus__Payment_Transaction__c</columns>
    <columns>abacus__Pledge_Allocation__c</columns>
    <columns>abacus__Pledge_Allocation_Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>abacus__IsDeleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Active Mappings</label>
    <language>en_US</language>
</ListView>